-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8063478 | 8u45 | Albert Noll | P1 | Resolved | Fixed | b01 |
| JDK-8062620 | 8u40 | Albert Noll | P1 | Closed | Fixed | b13 |
| JDK-8070863 | emb-8u47 | Albert Noll | P1 | Resolved | Fixed | team |
An excessive number of tests are timing out on nightly testing of jdk9/hs/hotspot
after hs-comp/hotspot was pushed up to that repo. The fix for 8040798 is
the suspicious culprit.
Timeouts mostly on solaris and linux, windows does not seem to be affected.
after hs-comp/hotspot was pushed up to that repo. The fix for 8040798 is
the suspicious culprit.
Timeouts mostly on solaris and linux, windows does not seem to be affected.
- backported by
-
JDK-8063478 Excessive number of tests timing out on nightly testing due to fix for 8040798
-
- Resolved
-
-
JDK-8070863 Excessive number of tests timing out on nightly testing due to fix for 8040798
-
- Resolved
-
-
JDK-8062620 Excessive number of tests timing out on nightly testing due to fix for 8040798
-
- Closed
-
- duplicates
-
JDK-8051513 gc/ArrayJuggle/Juggle34 timed out
-
- Closed
-
- relates to
-
JDK-8040798 compiler/startup/SmallCodeCacheStartup.java timed out in RT_Baseline
-
- Resolved
-