8042570: Excessive number of tests timing out on nightly testing due to fix for 8040798

Remove unnecessary lock in CompileBroker::mark_on_stack() that causes the deadlock

Reviewed-by: kvn, dcubed